<resources>
    <string name="app_name">患者端</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <!-- 登录页面 -->
    <string name="view_login_txb_hit_username">请输入手机号</string>
    <string name="view_login_txb_hit_password">请填写密码</string>
    <string name="view_login_btn_login">登        录</string>
    <string name="view_login_btn_forgotPW">忘记密码？</string>
    <string name="view_login_btn_signup">还没有账号？</string>

    <!-- 注册页面 -->
    <string name="view_signup_btn_signUp">注        册</string>
    <string name="view_signup_txb_hit_tel">请输入手机号</string>
    <string name="view_signup_txb_hit_signCode">请填写验证码</string>
    <string name="view_signup_txb_hit_password">输入数字、字母为登录密码</string>

    <!-- 服务页面 -->
    <string name="view_service_title">服 务</string>
    <string name="view_service_doctorRecommend">专家推荐</string>

    <string name="view_service_function_counseling_forText">图文咨询</string>
    <string name="view_service_function_counseling_forTel">电话咨询</string>
    <string name="view_service_function_counseling_forVideo">视频咨询</string>
    <string name="view_service_function_myOrder">我的订单</string>
    <string name="view_service_function_doctorRecommend">名医推荐</string>
    <string name="view_service_function_findDoctor">找医生</string>
</resources>
