<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textbox_bg_round_top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/icon_phone"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="icon_phone" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="36dp"
                android:background="@null"
                android:hint="@string/view_login_txb_hit_username"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textbox_bg_round_bottom"
            android:layout_marginTop="-1dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/icon_lock"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="icon_phone" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/editText2"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="36dp"
                android:hint="@string/view_login_txb_hit_password"
                android:background="@null"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16dp" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/loginActivity_btn_login"
            android:background="@drawable/button_bg"
            android:layout_marginTop="20dp"
            android:text="@string/view_login_btn_login"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/view_login_btn_forgotPW"
                android:id="@+id/textView"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/view_login_btn_signup"
                android:id="@+id/loginActivity_btn_signUp"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="#00d5d5" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>